--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,20 @@
     </a>
   </div>
   <!-- /.branding -->
+  <span class="menu-icon">
+    <svg class="open-icon" viewBox="0 0 18 15" width="18px" height="15px">
+      <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
+      <path d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
+      <path d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
+    </svg>
+
+    <svg class="close-icon" width="18px" height="18px" viewBox="-1 -1 98 98" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!-- Generator: Sketch 41 (35326) - http://www.bohemiancoding.com/sketch -->
+        <desc>Created with Sketch.</desc>
+        <defs></defs>
+        <path d="M70.16,48 L94.113,24.047 C95.634,22.527 96.394,20.68 96.394,18.507 C96.394,16.334 95.633,14.488 94.113,12.967 L83.033,1.886 C81.512,0.365 79.666,-0.395 77.494,-0.395 C75.32,-0.395 73.474,0.365 71.953,1.886 L48,25.839 L24.047,1.886 C22.527,0.365 20.68,-0.395 18.507,-0.395 C16.335,-0.395 14.488,0.365 12.967,1.886 L1.886,12.967 C0.366,14.487 -0.395,16.334 -0.395,18.507 C-0.395,20.68 0.365,22.526 1.886,24.047 L25.839,48 L1.886,71.953 C0.366,73.474 -0.395,75.32 -0.395,77.493 C-0.395,79.666 0.365,81.512 1.886,83.033 L12.967,94.113 C14.488,95.634 16.335,96.394 18.507,96.394 C20.68,96.394 22.526,95.633 24.047,94.113 L48,70.16 L71.954,94.113 C73.475,95.634 75.32,96.394 77.495,96.394 C79.667,96.394 81.514,95.633 83.034,94.113 L94.113,83.033 C95.634,81.513 96.394,79.666 96.394,77.493 C96.394,75.32 95.634,73.474 94.113,71.953 L70.16,48 L70.16,48 Z" id="Shape" stroke="none" fill-rule="evenodd"></path>
+    </svg>
+  </span>
   <nav id="main-menu">
     <ul>
       {% assign sorted_pages = site.pages | sort:"order" %}
