--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -19,7 +19,7 @@ layout: default
     <div class="column">
       <div class="meta">New Business</div>
       Dwi Burton <br>
-      business@instrument.com
+      business@flock.company
     </div>
     <div class="column">
       <div class="meta">Location</div>
