--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="{{ site.url }}/assets/js/video.js"></script>  
+    <script src="{{ site.url }}/assets/js/main.js"></script>      
   </body>
 
 </html>
